--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "roslib": "^1.4.1",
+    "socket.io": "^4.8.1",
     "ws": "^8.18.3"
   }
 }
