--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,5 @@
 /node_modules
 .env
-# ROS catkin workspace ignored files
-build/
-devel/
-install/
-
-# Python compiled files
-*.pyc
-__pycache__/
-*.so
-
-# C++ compiled files
-*.o
-
-# Temporary files
-*~
-*.swp
-*.swo
-
-# OS specific
-.DS_Store
-Thumbs.db
-
-# Catkin specific
-.catkin_workspace
-catkin_make.cache
-
-# CMake/Make files
-cmake_install.cmake
-CMakeCache.txt
-CMakeFiles/
-Makefile
-
-# IDE files (προαιρετικά)
-.vscode/
-.idea/
+ros_ws/build/
+ros_ws/devel/
+ros_ws/install/
