--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-joystick-component": "^6.2.1",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.8"
   },
