--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.18.0",
     "roslib": "^1.4.1",
     "socket.io": "^4.8.1",
+    "supertest": "^7.1.4",
     "ws": "^8.18.3"
   }
 }
