--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --detectOpenHandles --forceExit",
     "eslint": "eslint",
     "start": "node index.js"
   },
@@ -22,5 +22,8 @@
     "socket.io": "^4.8.1",
     "supertest": "^7.1.4",
     "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "jest": "^30.1.3"
   }
 }
